crates/veclite-ffi/veclite.h

/* VecLite C ABI (SPEC-008) — the single-file embedded vector database.
 *
 * Link against libveclite.{so,dylib} / veclite.dll (or the static libveclite.a)
 * plus this header. ABI is additive-only within a major version; gate loaders
 * on vl_abi_version(). No Rust toolchain is required to use the prebuilt
 * library. */


#ifndef VECLITE_H
#define VECLITE_H

#pragma once

/* Generated by cbindgen. Do not edit by hand — regenerate from crates/veclite-ffi. */

#include <stdarg.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>

/**
 * Success.
 */
#define VL_OK 0

#define VL_ERR_COLLECTION_NOT_FOUND -1

#define VL_ERR_VECTOR_NOT_FOUND -2

#define VL_ERR_ALREADY_EXISTS -3

#define VL_ERR_DIMENSION_MISMATCH -4

#define VL_ERR_LOCKED -5

#define VL_ERR_CORRUPT -6

#define VL_ERR_UNSUPPORTED_FORMAT -7

#define VL_ERR_UNSUPPORTED_PROVIDER -8

#define VL_ERR_READ_ONLY -9

#define VL_ERR_INVALID_ARGUMENT -10

#define VL_ERR_IO -11

#define VL_ERR_WAL_PENDING -12

#define VL_ERR_CLOSED -13

#define VL_ERR_INTERNAL -99

/**
 * Codec flags for structured payloads (FFI-005).
 */
#define VL_CODEC_JSON 0

#define VL_CODEC_MSGPACK 1

/**
 * Payload-index kinds for `vl_payload_index_create` (SPEC-006 §index kinds).
 */
#define VL_PIDX_KEYWORD 0

#define VL_PIDX_INTEGER 1

#define VL_PIDX_FLOAT 2

/**
 * Opaque collection handle.
 */
typedef struct vl_collection vl_collection;

/**
 * Opaque database handle.
 */
typedef struct vl_db vl_db;

/**
 * Opaque search-result set.
 */
typedef struct vl_hits vl_hits;

/**
 * Opaque result of `vl_search_batch`: one `BatchItem` per query, in order.
 */
typedef struct vl_hits_batch vl_hits_batch;

/**
 * Opaque scroll page: pre-encoded points plus the cursor for the next call.
 */
typedef struct vl_page vl_page;

/**
 * An owned byte buffer returned to the caller; free with `vl_buf_free`.
 */
typedef struct {
    /**
     * Buffer bytes.
     */
    uint8_t *data;
    /**
     * Buffer length.
     */
    uintptr_t len;
} vl_buf;

/**
 * A borrowed view of one hit, valid until `vl_hits_free` (FFI-010).
 */
typedef struct {
    /**
     * NUL-terminated id.
     */
    const char *id;
    /**
     * Fused/similarity/distance score.
     */
    float score;
    /**
     * Encoded payload bytes (null when absent).
     */
    const uint8_t *payload;
    /**
     * Payload length.
     */
    uintptr_t payload_len;
    /**
     * Whether `vector` is set.
     */
    bool has_vector;
    /**
     * Stored vector (null unless requested).
     */
    const float *vector;
    /**
     * Vector length.
     */
    uintptr_t vector_len;
} vl_hit_view;

#ifdef __cplusplus
extern "C" {
#endif // __cplusplus

/**
 * Crate semver string (static, never freed).
 */
const char *vl_version(void);

/**
 * ABI version; bumped only on additive changes (FFI-007).
 */
uint32_t vl_abi_version(void);

/**
 * On-disk storage format version.
 */
uint32_t vl_format_version(void);

/**
 * The last error message on the calling thread; valid until the next FFI call
 * on this thread (FFI-020). Never null.
 */
const char *vl_last_error_message(void);

/**
 * Open (or create) a database at `path`. `opts_*` are currently ignored (open
 * with defaults); tuned opts land with the follow-up.
 *
 * # Safety
 * `path` is a valid C string; `out` is a valid pointer to write the handle.
 */
int32_t vl_open(const char *path, const char *_opts, uintptr_t _opts_len, vl_db **out);

/**
 * Open an ephemeral in-memory database.
 *
 * # Safety
 * `out` is a valid pointer to write the handle.
 */
int32_t vl_open_memory(vl_db **out);

/**
 * Close and free a database handle (idempotent for null).
 *
 * # Safety
 * `db` is a handle from `vl_open*` that has not already been closed.
 */
int32_t vl_db_close(vl_db *db);

/**
 * Force a checkpoint.
 *
 * # Safety
 * `db` is a live handle.
 */
int32_t vl_db_checkpoint(vl_db *db);

/**
 * Create a collection. `opts` is a JSON/MessagePack object
 * `{ dimension, metric?, embedding_provider?, quantization_bits? }`.
 *
 * # Safety
 * All pointers are valid per their lengths; `out` receives the handle.
 */
int32_t vl_collection_create(vl_db *db,
                             const char *name,
                             const uint8_t *opts,
                             uintptr_t opts_len,
                             uint8_t codec,
                             vl_collection **out);

/**
 * Get a handle to an existing collection (or alias).
 *
 * # Safety
 * Pointers valid; `out` receives the handle.
 */
int32_t vl_collection_get(vl_db *db, const char *name, vl_collection **out);

/**
 * Drop a collection.
 *
 * # Safety
 * `db` live; `name` valid.
 */
int32_t vl_collection_drop(vl_db *db, const char *name);

/**
 * Rename a collection.
 *
 * # Safety
 * `db` live; `from`/`to` valid.
 */
int32_t vl_collection_rename(vl_db *db, const char *from, const char *to);

/**
 * Free a collection handle (does not drop the collection).
 *
 * # Safety
 * `c` is a handle from `vl_collection_create`/`get`.
 */
int32_t vl_collection_free(vl_collection *c);

/**
 * Encode the sorted collection names into `out` (freed with `vl_buf_free`).
 *
 * # Safety
 * `db` live; `out` valid.
 */
int32_t vl_collections_list(vl_db *db, uint8_t codec, vl_buf *out);

/**
 * Create an alias.
 *
 * # Safety
 * `db` live; `alias`/`target` valid.
 */
int32_t vl_alias_create(vl_db *db, const char *alias, const char *target);

/**
 * Delete an alias.
 *
 * # Safety
 * `db` live; `alias` valid.
 */
int32_t vl_alias_delete(vl_db *db, const char *alias);

/**
 * Encode `{ name, dimension, len, tombstones, auto_embed }` into `out`.
 *
 * # Safety
 * `c` live; `out` valid.
 */
int32_t vl_collection_stats(vl_collection *c, uint8_t codec, vl_buf *out);

/**
 * Upsert one vector with an optional payload.
 *
 * # Safety
 * `vec`/`dim` describe a valid slice; `payload`/`payload_len` a valid slice or
 * null/0.
 */
int32_t vl_upsert(vl_collection *c,
                  const char *id,
                  const float *vec,
                  uintptr_t dim,
                  const uint8_t *payload,
                  uintptr_t payload_len,
                  uint8_t codec);

/**
 * Upsert one text document (auto-embed collections).
 *
 * # Safety
 * `id`/`text` valid; `payload` valid or null/0.
 */
int32_t vl_upsert_text(vl_collection *c,
                       const char *id,
                       const char *text,
                       const uint8_t *payload,
                       uintptr_t payload_len,
                       uint8_t codec);

/**
 * Delete one id; `existed` (if non-null) receives whether it was present.
 *
 * # Safety
 * `id` valid; `existed` valid or null.
 */
int32_t vl_delete(vl_collection *c, const char *id, bool *existed);

/**
 * Number of live vectors.
 *
 * # Safety
 * `c` live; `out` valid.
 */
int32_t vl_count(vl_collection *c, uint64_t *out);

/**
 * Fetch one point encoded into `out`; an empty buffer means absent.
 *
 * # Safety
 * `id` valid; `out` valid.
 */
int32_t vl_get(vl_collection *c, const char *id, uint8_t codec, vl_buf *out);

/**
 * k-NN search. `query_opts` (JSON/MessagePack) is an optional
 * `{ ef_search?, with_payload?, with_vector?, filter? }`.
 *
 * # Safety
 * `vec`/`dim` valid; `query_opts` valid or null/0; `out` valid.
 */
int32_t vl_search(vl_collection *c,
                  const float *vec,
                  uintptr_t dim,
                  uint32_t limit,
                  const uint8_t *query_opts,
                  uintptr_t opts_len,
                  uint8_t codec,
                  vl_hits **out);

/**
 * Text search (auto-embed collections). `query_opts` (JSON/MessagePack) is an
 * optional `{ with_payload?, with_vector? }`. The core text path always ranks
 * with the collection's default `ef_search` and does not accept a payload
 * filter, so `ef_search`/`filter` here are rejected with a clear error pointing
 * at `vl_hybrid_search` (which fuses text with a filter). `with_payload=false`
 * strips payloads; `with_vector=true` attaches each hit's stored vector.
 *
 * # Safety
 * `query` valid; `query_opts` valid or null/0; `out` valid.
 */
int32_t vl_search_text(vl_collection *c,
                       const char *query,
                       uint32_t limit,
                       const uint8_t *query_opts,
                       uintptr_t opts_len,
                       uint8_t codec,
                       vl_hits **out);

/**
 * Number of hits.
 *
 * # Safety
 * `hits` is a live `vl_hits` (or null → 0).
 */
uint32_t vl_hits_len(const vl_hits *hits);

/**
 * Fill `out` with a borrowed view of hit `i`; returns `VL_ERR_INVALID_ARGUMENT`
 * if `i` is out of range. Views are valid until `vl_hits_free`.
 *
 * # Safety
 * `hits` live; `out` valid.
 */
int32_t vl_hits_get(const vl_hits *hits, uint32_t i, vl_hit_view *out);

/**
 * Free a search-result set.
 *
 * # Safety
 * `hits` is a handle from a search function (or null).
 */
void vl_hits_free(vl_hits *hits);

/**
 * Free a byte buffer returned by the library.
 *
 * # Safety
 * `buf` points at a `vl_buf` filled by the library (or null).
 */
void vl_buf_free(vl_buf *buf);

/**
 * Upsert many points at once. `points` is a JSON/MessagePack array of point
 * objects `{ id, vector, payload?, sparse? }` (the SDK wire shape); the whole
 * batch is validated and applied under one write path (FR-06).
 *
 * # Safety
 * `points`/`points_len` describe a valid slice; `c` is a live handle.
 */
int32_t vl_upsert_batch(vl_collection *c,
                        const uint8_t *points,
                        uintptr_t points_len,
                        uint8_t codec);

/**
 * Delete many ids. `ids` is a JSON/MessagePack array of strings; `out_deleted`
 * (if non-null) receives how many were present.
 *
 * # Safety
 * `ids`/`ids_len` describe a valid slice; `out_deleted` is valid or null.
 */
int32_t vl_delete_batch(vl_collection *c,
                        const uint8_t *ids,
                        uintptr_t ids_len,
                        uint8_t codec,
                        uint64_t *out_deleted);

/**
 * Batch k-NN search. `vecs` is `n` contiguous query vectors of `dim` floats
 * each; every query uses the same `limit` and the shared `query_opts`
 * (`{ ef_search?, filter?, with_payload?, with_vector? }`). Per-query failures
 * (e.g. a dimension mismatch) are reported per item, not as a whole-call error.
 *
 * # Safety
 * `vecs` points at `n * dim` valid floats; `query_opts` valid or null/0; `out`
 * is valid.
 */
int32_t vl_search_batch(vl_collection *c,
                        const float *vecs,
                        uintptr_t n,
                        uintptr_t dim,
                        uint32_t limit,
                        const uint8_t *query_opts,
                        uintptr_t opts_len,
                        uint8_t codec,
                        vl_hits_batch **out);

/**
 * Number of per-query results.
 *
 * # Safety
 * `batch` is a live `vl_hits_batch` (or null → 0).
 */
uint32_t vl_hits_batch_len(const vl_hits_batch *batch);

/**
 * Status code for query `i` (`VL_OK` or a `VL_ERR_*`); `VL_ERR_INVALID_ARGUMENT`
 * if `i` is out of range.
 *
 * # Safety
 * `batch` is a live handle (or null).
 */
int32_t vl_hits_batch_code(const vl_hits_batch *batch, uint32_t i);

/**
 * Number of hits for query `i` (0 if out of range or the query failed).
 *
 * # Safety
 * `batch` is a live handle (or null).
 */
uint32_t vl_hits_batch_hits_len(const vl_hits_batch *batch, uint32_t i);

/**
 * Fill `out` with a borrowed view of hit `hit` in query `query`; returns
 * `VL_ERR_INVALID_ARGUMENT` if either index is out of range. Views are valid
 * until `vl_hits_batch_free`.
 *
 * # Safety
 * `batch` live; `out` valid.
 */
int32_t vl_hits_batch_hit(const vl_hits_batch *batch,
                          uint32_t query,
                          uint32_t hit,
                          vl_hit_view *out);

/**
 * Free a batch-search result set.
 *
 * # Safety
 * `batch` is a handle from `vl_search_batch` (or null).
 */
void vl_hits_batch_free(vl_hits_batch *batch);

/**
 * Hybrid (dense + sparse + text, RRF-fused) search. `opts` (JSON/MessagePack)
 * is `{ dense?, text?, sparse?{indices,values}, limit?, alpha?, rrf_k?,
 * with_payload?, with_vector?, filter? }` — at least one of dense/text/sparse
 * must be present.
 *
 * # Safety
 * `opts`/`opts_len` describe a valid slice; `out` is valid.
 */
int32_t vl_hybrid_search(vl_collection *c,
                         const uint8_t *opts,
                         uintptr_t opts_len,
                         uint8_t codec,
                         vl_hits **out);

/**
 * Scroll the collection in id order. `scroll_opts` (optional JSON/MessagePack)
 * is `{ cursor?, limit?, filter? }`: `cursor` is absent on the first call, then
 * the value from `vl_page_cursor` for each subsequent page. Points in the page
 * are encoded with `codec`, fetched one at a time via `vl_page_point`.
 *
 * # Safety
 * `scroll_opts` valid or null/0; `out` valid.
 */
int32_t vl_scroll(vl_collection *c,
                  const uint8_t *scroll_opts,
                  uintptr_t len,
                  uint8_t codec,
                  vl_page **out);

/**
 * Number of points in the page.
 *
 * # Safety
 * `page` is a live handle (or null → 0).
 */
uint32_t vl_page_len(const vl_page *page);

/**
 * Copy point `i`'s encoded bytes into `out` (owned; free with `vl_buf_free`).
 * `VL_ERR_INVALID_ARGUMENT` if `i` is out of range.
 *
 * # Safety
 * `page` live; `out` valid.
 */
int32_t vl_page_point(const vl_page *page, uint32_t i, vl_buf *out);

/**
 * The cursor for the next page, or null when the scan is exhausted. Borrowed;
 * valid until `vl_page_free`.
 *
 * # Safety
 * `page` is a live handle (or null → null).
 */
const char *vl_page_cursor(const vl_page *page);

/**
 * Free a scroll page.
 *
 * # Safety
 * `page` is a handle from `vl_scroll` (or null).
 */
void vl_page_free(vl_page *page);

/**
 * Rebuild the ANN index from the live vectors (exact, potentially slow).
 *
 * # Safety
 * `c` is a live handle.
 */
int32_t vl_collection_reindex(vl_collection *c);

/**
 * Refit the text embedder's vocabulary and re-embed every text document.
 *
 * # Safety
 * `c` is a live handle.
 */
int32_t vl_collection_refit(vl_collection *c);

/**
 * Declare a payload index on `key`. `kind` is one of `VL_PIDX_KEYWORD` (0),
 * `VL_PIDX_INTEGER` (1), or `VL_PIDX_FLOAT` (2).
 *
 * # Safety
 * `c` live; `key` valid.
 */
int32_t vl_payload_index_create(vl_collection *c, const char *key, uint8_t kind);

/**
 * Write a consistent snapshot of the whole database to `path`.
 *
 * # Safety
 * `db` live; `path` valid.
 */
int32_t vl_db_snapshot(vl_db *db, const char *path);

/**
 * Reclaim space from tombstoned/rewritten data.
 *
 * # Safety
 * `db` is a live handle.
 */
int32_t vl_db_vacuum(vl_db *db);

/**
 * Encode a database overview into `out` (freed with `vl_buf_free`):
 * `{ format_version, collections: [{ name, dimension, len, tombstones,
 * auto_embed, payload_indexes: [[field, kind]] }], aliases: [[alias, target]] }`.
 *
 * # Safety
 * `db` live; `out` valid.
 */
int32_t vl_db_info(vl_db *db, uint8_t codec, vl_buf *out);

/**
 * Split `text` into overlapping chunks. `opts` (optional JSON/MessagePack) is
 * `{ max_chars?, overlap? }`. Encodes `[{ text, start, end }]` into `out`
 * (freed with `vl_buf_free`). A pure function — no database needed.
 *
 * # Safety
 * `text` valid; `opts` valid or null/0; `out` valid.
 */
int32_t vl_chunk(const char *text,
                 const uint8_t *opts,
                 uintptr_t opts_len,
                 uint8_t codec,
                 vl_buf *out);

/**
 * Test-only hook: forces a panic to exercise the `catch_unwind` boundary
 * (SPEC-008 acceptance 2). Not part of the stable surface.
 */
int32_t vl__test_force_panic(void);

#ifdef __cplusplus
}  // extern "C"
#endif  // __cplusplus

#endif  /* VECLITE_H */